# PiPicoTest

./: .gitmodules  CMakeLists.txt  README.md  test.c
simple/: README.md
simple/blink/: CMakeLists.txt
simple/helloworld-usb/: CMakeLists.txt
simple/usbd-hid-composite/: CMakeLists.txt  README.md  main.c
simple/usbh-hid/: CMakeLists.txt  README.md  kbd-parser.cpp  kbd-parser.h  main.cpp  usb-host-shield  usb_hid.h
tools/: copy-flash.sh  env.sh
